# higgsfield_test

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fixtures/: conversations.json  probes.json
scripts/: persistence_check.sh  prefetch_models.py
src/memory_service/: __init__.py  config.py  context.py  db.py  embeddings.py  extraction.py  llm.py  logging_conf.py  main.py  models.py  retrieval.py  schema.sql  store.py  taxonomy.py  tokens.py
tests/: conftest.py  harness.py  test_concurrent.py  test_contract.py  test_env_unit.py  test_extraction_unit.py  test_malformed.py  test_persistence.py  test_recall_quality.py  test_units.py
