[project]
name = "memory-service"
version = "0.7.0"
description = "Memory service for an AI agent — ingest turns, extract structured knowledge, answer recall queries."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "fastembed>=0.5",
    "anthropic>=0.40",
    "openai>=1.55",
    "numpy>=1.26,<2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

# No [build-system]: this is a "virtual" uv project. `uv sync` installs only the
# dependencies (not the app itself), so the Docker layer that installs deps does
# not depend on the source tree. The app is imported via PYTHONPATH=src.

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
